fix:menu button visibility

--- a/app/globals.css
+++ b/app/globals.css
@@ -174,6 +174,8 @@ body {
   -webkit-backface-visibility: hidden;
 }
 
-.md\:hidden {
-  display: none !important;
+@media screen and (min-width: 768px) {
+    .md\:hidden {
+    display: none !important;
+  }
 }
